--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,8 @@
         <item>in eingetragener Partnerschaft lebend</item>
         <item>geschieden</item>
         <item>Ehe aufgehoben oder für nichtig erklärt</item>
-        <item>eingetragene Partnerschaft aufgelöst oder für nichtig erklärt</item>
+        <item>eingetragene Partnerschaft aufgelöst</item>
+        <item>eingetragene Partnerschaft für nichtig erklärt</item>
         <item>verwitwet</item>
         <item>hinterbliebener eingetragener Partner</item>
     </string-array>
